# simple_expense_tracking_app

./: .Dockerignore  .gitignore  .hintrc  Makefile  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  setup_moi_truong.md  sign in.html  sign up.html  styles.css  user_info.css  user_info.html
app/: Makefile  manage.py
app/BaseApp/: admin.py  decorators.py  forms.py  models.py  urls.py  views.py
app/BaseApp/migrations/: 0001_initial.py  0002_alter_transaction_profile_alter_transactiontag_user.py  0003_rename_profile_transaction_user.py  0004_defaulttag_alter_transactiontag_name_and_more.py  0005_remove_transactiontag_default_tag_and_more.py
app/BaseApp/views/: __init__.py  auth.py  base.py
app/ExpenseApp/: apps.py
app/project/: asgi.py  settings.py  urls.py
app/static/css/: Style-Signin.css  Style-Signup.css  auth.css  base.css
app/templates/auth/: sign_in.html  sign_up.html
app/templates/base/: base.html  create_transaction.html  home.html  profile_create_modal.html  testing.html  transaction_detail.html  user_profile.html
app/templates/user/: sign_in.html  sign_up.html
