[tool.poetry]
name = "eta"
version = "0.1.0"
description = "Simple Expense Tracking App"
authors = ["Qmi <minh.pham1126@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
django-money = "^3.4.1"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.3.0"}
pillow = "^10.2.0"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
commitizen = "^3.14.1"

[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"
